--- a/AlgorithmGossip/SeparateNumber.htm
+++ b/AlgorithmGossip/SeparateNumber.htm
@@ -33,7 +33,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -44,7 +44,7 @@
   
   
   
-  <title>¼Æ¦r©î¸Ñ</title>
+  <title>æ•¸å­—æ‹†è§£</title>
 </head>
 
 
@@ -61,23 +61,23 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: ¼Æ¦r©î¸Ñ</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: æ•¸å­—æ‹†è§£</a></h1>
 
 
 
 
 
-<h2>»¡©ú</h2>
+<h2>èªªæ˜</h2>
 
-³o­ÓÃD¥Ø¨Ó¦Û©ó <a href="http://www.jsptw.com/jute/post/view?bid=5&amp;id=8317&amp;sty=1&amp;tpg=1&amp;age=0">¼Æ¦r©î¸Ñ</a>¡A§Ú±N¤§§ï¬°C»y¨¥ªºª©¥»¡A¨Ã¥[¤W»¡©ú¡C<br>
+é€™å€‹é¡Œç›®ä¾†è‡ªæ–¼ <a href="http://www.jsptw.com/jute/post/view?bid=5&amp;id=8317&amp;sty=1&amp;tpg=1&amp;age=0">æ•¸å­—æ‹†è§£</a>ï¼Œæˆ‘å°‡ä¹‹æ”¹ç‚ºCèªè¨€çš„ç‰ˆæœ¬ï¼Œä¸¦åŠ ä¸Šèªªæ˜ã€‚<br>
 
 <br>
 
-ÃD¥Ø¬O³o¼Ëªº¡G<br>
+é¡Œç›®æ˜¯é€™æ¨£çš„ï¼š<br>
 
-<div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">3&nbsp;= 2+1 = 1+1+1 ©Ò¥H3¦³¤TºØ©îªk</span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
+<div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">3&nbsp;= 2+1 = 1+1+1 æ‰€ä»¥3æœ‰ä¸‰ç¨®æ‹†æ³•</span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
-<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">4 = 3 + 1 = 2 + 2 = 2 + 1 + 1 = 1 + 1 + 1 + 1 ¦@¤­ºØ</span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
+<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">4 = 3 + 1 = 2 + 2 = 2 + 1 + 1 = 1 + 1 + 1 + 1 å…±äº”ç¨®</span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
 <span style="font-weight: bold; font-family: Courier New,Courier,monospace;">5 = 4 + 1 = 3 + 2 = 3 + 1 + 1 = 2 + 2 + 1 = 2 + 1 + 1 + 1 = 1 + 1 +1 +1 +1</span><br>
 
@@ -85,15 +85,15 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-¦@¤CºØ<br>
+å…±ä¸ƒç¨®<br>
 
 <br>
 
-¨Ì¦¹Ãş±À¡A½Ğ°İ¤@­Ó«ü©w¼Æ¦rNUMªº©î¸Ñ¤èªk­Ó¼Æ¦³¦h¤Ö­Ó¡H<br>
+ä¾æ­¤é¡æ¨ï¼Œè«‹å•ä¸€å€‹æŒ‡å®šæ•¸å­—NUMçš„æ‹†è§£æ–¹æ³•å€‹æ•¸æœ‰å¤šå°‘å€‹ï¼Ÿ<br>
 
-<h2>¸Ñªk</h2>
+<h2>è§£æ³•</h2>
 
-§Ú­Ì¥H¤W¨Ò¤¤³Ì«á¤@­Ó¼Æ¦r5ªº©î¸Ñ¬°¨Ò¡A°²³]f( n )¬°¼Æ¦rnªº¥i©î¸Ñ¤è¦¡­Ó¼Æ¡A¦Óf(x, y)¬°¨Ï¥Îy¥H¤Uªº¼Æ¦r¨Ó©î¸Ñxªº¤èªk­Ó¼Æ¡A«hÆ[¹î¡G<br>
+æˆ‘å€‘ä»¥ä¸Šä¾‹ä¸­æœ€å¾Œä¸€å€‹æ•¸å­—5çš„æ‹†è§£ç‚ºä¾‹ï¼Œå‡è¨­f( n )ç‚ºæ•¸å­—nçš„å¯æ‹†è§£æ–¹å¼å€‹æ•¸ï¼Œè€Œf(x, y)ç‚ºä½¿ç”¨yä»¥ä¸‹çš„æ•¸å­—ä¾†æ‹†è§£xçš„æ–¹æ³•å€‹æ•¸ï¼Œå‰‡è§€å¯Ÿï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">5 = 4 + 1 = 3 + 2 = 3 + 1 + 1 = 2 + 2 + 1 = 2 + 1 + 1 + 1 = 1 + 1 +1 +1 +1</span><br>
 
@@ -101,7 +101,7 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-¨Ï¥Î¨ç¦¡¨Óªí¥Üªº¸Ü¡G<br>
+ä½¿ç”¨å‡½å¼ä¾†è¡¨ç¤ºçš„è©±ï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">f(5) = f(4, 1) + f(3,2) + f(2,3) + f(1,4) + f(0,5)</span><br>
 
@@ -109,7 +109,7 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-¨ä¤¤f(1, 4) = f(1, 3) + f(1, 2) + f(1, 1)¡A¦ı¬O¨Ï¥Î¤j©ó1ªº¼Æ¦r¨Ó©î¸Ñ1¨S¦³·N¸q¡A©Ò¥Hf(1, 4) = f(1, 1)¡A¦Ó¦P¼Ëªº¡Af(0, 5)·|µ¥©óf(0, 0)¡A©Ò¥H¡G<br>
+å…¶ä¸­f(1, 4) = f(1, 3) + f(1, 2) + f(1, 1)ï¼Œä½†æ˜¯ä½¿ç”¨å¤§æ–¼1çš„æ•¸å­—ä¾†æ‹†è§£1æ²’æœ‰æ„ç¾©ï¼Œæ‰€ä»¥f(1, 4) = f(1, 1)ï¼Œè€ŒåŒæ¨£çš„ï¼Œf(0, 5)æœƒç­‰æ–¼f(0, 0)ï¼Œæ‰€ä»¥ï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">f(5) = f(4, 1) + f(3,2) + f(2,3) + f(1,1) + f(0,0)</span><br>
 
@@ -117,18 +117,18 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-¨Ì·Ó¥H¤Wªº»¡©ú¡A¨Ï¥Î°ÊºAµ{¦¡³Wµe¡]Dynamic programming¡^¨Ó¶i¦æ¨D¸Ñ¡A¨ä¤¤f(4,1)¨ä¹ê´N¬Of(5-1,
-min(5-1,1))¡Af(x, y)´Nµ¥©óf(n-y, min(n-x, y))¡A¨ä¤¤n¬°­n©î¸Ñªº¼Æ¦r¡A¦Ómin()ªí¥Ü¨ú¨âªÌ¤¤¸û¤pªº¼Æ¡C<br>
+ä¾ç…§ä»¥ä¸Šçš„èªªæ˜ï¼Œä½¿ç”¨å‹•æ…‹ç¨‹å¼è¦ç•«ï¼ˆDynamic programmingï¼‰ä¾†é€²è¡Œæ±‚è§£ï¼Œå…¶ä¸­f(4,1)å…¶å¯¦å°±æ˜¯f(5-1,
+min(5-1,1))ï¼Œf(x, y)å°±ç­‰æ–¼f(n-y, min(n-x, y))ï¼Œå…¶ä¸­nç‚ºè¦æ‹†è§£çš„æ•¸å­—ï¼Œè€Œmin()è¡¨ç¤ºå–å…©è€…ä¸­è¼ƒå°çš„æ•¸ã€‚<br>
 
 <br>
 
-¨Ï¥Î¤@­Ó¤Gºû°}¦Cªí®ætable[x][y]¨Óªí¥Üf(x, y)¡A­è¶}©l®É¡A±N¨C¦Cªº¯Á¤Ş0»P¯Á¤Ş1¤¸¯À­È³]©w¬°1¡A¦]¬°¥ô¦ó¼Æ¥H0¥H¤Uªº¼Æ©î¸Ñ¥²¥u¦³1ºØ¡A¦Ó¥ô¦ó¼Æ¥H1¥H¤Uªº¼Æ©î¸Ñ¤]¥²¥u¦³1ºØ¡G<br>
+ä½¿ç”¨ä¸€å€‹äºŒç¶­é™£åˆ—è¡¨æ ¼table[x][y]ä¾†è¡¨ç¤ºf(x, y)ï¼Œå‰›é–‹å§‹æ™‚ï¼Œå°‡æ¯åˆ—çš„ç´¢å¼•0èˆ‡ç´¢å¼•1å…ƒç´ å€¼è¨­å®šç‚º1ï¼Œå› ç‚ºä»»ä½•æ•¸ä»¥0ä»¥ä¸‹çš„æ•¸æ‹†è§£å¿…åªæœ‰1ç¨®ï¼Œè€Œä»»ä½•æ•¸ä»¥1ä»¥ä¸‹çš„æ•¸æ‹†è§£ä¹Ÿå¿…åªæœ‰1ç¨®ï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">for(i = 0; i &lt; NUM +1; i++){ </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
-<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; table[i][0] = 1;&nbsp; // ¥ô¦ó¼Æ¥H0¥H¤Uªº¼Æ©î¸Ñ¥²¥u¦³1ºØ </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
+<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; table[i][0] = 1;&nbsp; // ä»»ä½•æ•¸ä»¥0ä»¥ä¸‹çš„æ•¸æ‹†è§£å¿…åªæœ‰1ç¨® </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
-<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; table[i][1] = 1;&nbsp; // ¥ô¦ó¼Æ¥H1¥H¤Uªº¼Æ©î¸Ñ¥²¥u¦³1ºØ </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
+<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; table[i][1] = 1;&nbsp; // ä»»ä½•æ•¸ä»¥1ä»¥ä¸‹çš„æ•¸æ‹†è§£å¿…åªæœ‰1ç¨® </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
 <span style="font-weight: bold; font-family: Courier New,Courier,monospace;">}</span><br>
 
@@ -138,7 +138,7 @@ min(5-1,1))¡Af(x, y)´Nµ¥©óf(n-y, min(n-x, y))¡A¨ä¤¤n¬°­n©î¸Ñªº¼Æ¦r¡A¦Ómin()ªí¥Ü¨
 
 <br>
 
-±µ¤U¨Ó´N¶}©l¤@­Ó¤@­Ó¶i¦æ©î¸Ñ¤F¡A¦pªG¼Æ¦r¬°NUM¡A«h§Ú­Ìªº°}¦Cºû«×¤j¤p¥²¶·¬°NUM x (NUM/2+1)¡A¥H¼Æ¦r10¬°¨Ò¡A¨äºû«×¬°10 x 6§Ú­Ìªºªí®æ±N·|¦p¤U©Ò¥Ü¡G<br>
+æ¥ä¸‹ä¾†å°±é–‹å§‹ä¸€å€‹ä¸€å€‹é€²è¡Œæ‹†è§£äº†ï¼Œå¦‚æœæ•¸å­—ç‚ºNUMï¼Œå‰‡æˆ‘å€‘çš„é™£åˆ—ç¶­åº¦å¤§å°å¿…é ˆç‚ºNUM x (NUM/2+1)ï¼Œä»¥æ•¸å­—10ç‚ºä¾‹ï¼Œå…¶ç¶­åº¦ç‚º10 x 6æˆ‘å€‘çš„è¡¨æ ¼å°‡æœƒå¦‚ä¸‹æ‰€ç¤ºï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">1 1 0 0 0 0</span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
@@ -165,7 +165,7 @@ min(5-1,1))¡Af(x, y)´Nµ¥©óf(n-y, min(n-x, y))¡A¨ä¤¤n¬°­n©î¸Ñªº¼Æ¦r¡A¦Ómin()ªí¥Ü¨
 
 <br>
 
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 
 <ul>
@@ -176,7 +176,7 @@ min(5-1,1))¡Af(x, y)´Nµ¥©óf(n-y, min(n-x, y))¡A¨ä¤¤n¬°­n©î¸Ñªº¼Æ¦r¡A¦Ómin()ªí¥Ü¨
 </ul>
 
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#define NUM 10    //  ­n©î¸Ñªº¼Æ¦r <br>#define DEBUG 0 <br><br>int main(void) { <br>    int table[NUM][NUM/2+1] = {0}; // °ÊºA³Wµeªí®æ <br>    int count = 0; <br>    int result = 0; <br>    int i, j, k; <br><br>    printf("¼Æ¦r©î¸Ñ\n"); <br>    printf("3 = 2+1 = 1+1+1 ©Ò¥H3¦³¤TºØ©îªk\n"); <br>    printf("4 = 3 + 1 = 2 + 2 = 2 + 1 + 1 = 1 + 1 + 1 + 1");   <br>    printf("¦@¤­ºØ\n"); <br>    printf("5 = 4 + 1 = 3 + 2 = 3 + 1 + 1");<br>    printf(" = 2 + 2 + 1 = 2 + 1 + 1 + 1 = 1 + 1 +1 +1 +1");<br>    printf("¦@¤CºØ\n"); <br>    printf("¨Ì¦¹Ãş±À¡A¨D %d ¦³´XºØ©îªk¡H", NUM); <br><br>    // ªì©l¤Æ <br>    for(i = 0; i &lt; NUM; i++){ <br>        table[i][0] = 1;  // ¥ô¦ó¼Æ¥H0¥H¤Uªº¼Æ©î¸Ñ¥²¥u¦³1ºØ <br>        table[i][1] = 1;  // ¥ô¦ó¼Æ¥H1¥H¤Uªº¼Æ©î¸Ñ¥²¥u¦³1ºØ <br>    }        <br><br>    // °ÊºA³W¹º <br>    for(i = 2; i &lt;= NUM; i++){ <br>       for(j = 2; j &lt;= i; j++){ <br>            if(i + j &gt; NUM) // ¤j©ó NUM <br>                continue; <br>            <br>            count = 0;    <br>            for(k = 1 ; k &lt;= j; k++){ <br>                count += table[i-k][(i-k &gt;= k) ? k : i-k];                  <br>            } <br>            table[i][j] = count; <br>        }            <br>    } <br><br>    // ­pºâ¨ÃÅã¥Üµ²ªG <br>    for(k = 1 ; k &lt;= NUM; k++) <br>        result += table[NUM-k][(NUM-k &gt;= k) ? k : NUM-k];                    <br>    printf("\n\nresult: %d\n", result); <br><br>    if(DEBUG) { <br>        printf("\n°£¿ù¸ê°T\n"); <br>        for(i = 0; i &lt; NUM; i++) { <br>            for(j = 0; j &lt; NUM/2+1; j++) <br>                 printf("%2d", table[i][j]); <br>            printf("\n"); <br>        } <br>    } <br><br>    return 0; <br>}</pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#define NUM 10    //  è¦æ‹†è§£çš„æ•¸å­— <br>#define DEBUG 0 <br><br>int main(void) { <br>    int table[NUM][NUM/2+1] = {0}; // å‹•æ…‹è¦ç•«è¡¨æ ¼ <br>    int count = 0; <br>    int result = 0; <br>    int i, j, k; <br><br>    printf("æ•¸å­—æ‹†è§£\n"); <br>    printf("3 = 2+1 = 1+1+1 æ‰€ä»¥3æœ‰ä¸‰ç¨®æ‹†æ³•\n"); <br>    printf("4 = 3 + 1 = 2 + 2 = 2 + 1 + 1 = 1 + 1 + 1 + 1");   <br>    printf("å…±äº”ç¨®\n"); <br>    printf("5 = 4 + 1 = 3 + 2 = 3 + 1 + 1");<br>    printf(" = 2 + 2 + 1 = 2 + 1 + 1 + 1 = 1 + 1 +1 +1 +1");<br>    printf("å…±ä¸ƒç¨®\n"); <br>    printf("ä¾æ­¤é¡æ¨ï¼Œæ±‚ %d æœ‰å¹¾ç¨®æ‹†æ³•ï¼Ÿ", NUM); <br><br>    // åˆå§‹åŒ– <br>    for(i = 0; i &lt; NUM; i++){ <br>        table[i][0] = 1;  // ä»»ä½•æ•¸ä»¥0ä»¥ä¸‹çš„æ•¸æ‹†è§£å¿…åªæœ‰1ç¨® <br>        table[i][1] = 1;  // ä»»ä½•æ•¸ä»¥1ä»¥ä¸‹çš„æ•¸æ‹†è§£å¿…åªæœ‰1ç¨® <br>    }        <br><br>    // å‹•æ…‹è¦åŠƒ <br>    for(i = 2; i &lt;= NUM; i++){ <br>       for(j = 2; j &lt;= i; j++){ <br>            if(i + j &gt; NUM) // å¤§æ–¼ NUM <br>                continue; <br>            <br>            count = 0;    <br>            for(k = 1 ; k &lt;= j; k++){ <br>                count += table[i-k][(i-k &gt;= k) ? k : i-k];                  <br>            } <br>            table[i][j] = count; <br>        }            <br>    } <br><br>    // è¨ˆç®—ä¸¦é¡¯ç¤ºçµæœ <br>    for(k = 1 ; k &lt;= NUM; k++) <br>        result += table[NUM-k][(NUM-k &gt;= k) ? k : NUM-k];                    <br>    printf("\n\nresult: %d\n", result); <br><br>    if(DEBUG) { <br>        printf("\né™¤éŒ¯è³‡è¨Š\n"); <br>        for(i = 0; i &lt; NUM; i++) { <br>            for(j = 0; j &lt; NUM/2+1; j++) <br>                 printf("%2d", table[i][j]); <br>            printf("\n"); <br>        } <br>    } <br><br>    return 0; <br>}</pre>
 
 <br>
 
