--- a/AlgorithmGossip/SelectionInsertionBubble.htm
+++ b/AlgorithmGossip/SelectionInsertionBubble.htm
@@ -27,7 +27,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -36,7 +36,7 @@
   
   
   
-  <title>¿ï¾Ü¡B´¡¤J¡B®ğªw±Æ§Ç</title>
+  <title>é¸æ“‡ã€æ’å…¥ã€æ°£æ³¡æ’åº</title>
 </head>
 
 
@@ -51,26 +51,26 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;¿ï¾Ü¡B´¡¤J¡B®ğªw±Æ§Ç</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;é¸æ“‡ã€æ’å…¥ã€æ°£æ³¡æ’åº</a></h1>
 
 
 
 
-<h2>»¡©ú</h2>
-¿ï¾Ü±Æ§Ç¡]Selection sort¡^¡B´¡¤J±Æ§Ç¡]Insertion sort¡^»P®ğªw±Æ§Ç¡]Bubble sort¡^³o¤T­Ó±Æ§Ç¤è¦¡¬Oªì¾Ç±Æ§Ç©Ò¥²¶·ª¾¹Dªº¤T­Ó°ò¥»±Æ§Ç¤è¦¡¡A¥¦­Ì¥Ñ©ó³t«×¤£§Ö¦Ó¤£¹ê¥Î¡]¥­§¡»P³Ì§Öªº®É¶¡½ÆÂø«×³£¬OO(n<sup>2</sup>)¡^¡AµM¦Ó¥¦­Ì±Æ§Çªº¤è¦¡½T¬O­È±oÆ[¹î»P±´°Qªº¡C<br>
-<h2>¸Ñªk</h2>
+<h2>èªªæ˜</h2>
+é¸æ“‡æ’åºï¼ˆSelection sortï¼‰ã€æ’å…¥æ’åºï¼ˆInsertion sortï¼‰èˆ‡æ°£æ³¡æ’åºï¼ˆBubble sortï¼‰é€™ä¸‰å€‹æ’åºæ–¹å¼æ˜¯åˆå­¸æ’åºæ‰€å¿…é ˆçŸ¥é“çš„ä¸‰å€‹åŸºæœ¬æ’åºæ–¹å¼ï¼Œå®ƒå€‘ç”±æ–¼é€Ÿåº¦ä¸å¿«è€Œä¸å¯¦ç”¨ï¼ˆå¹³å‡èˆ‡æœ€å¿«çš„æ™‚é–“è¤‡é›œåº¦éƒ½æ˜¯O(n<sup>2</sup>)ï¼‰ï¼Œç„¶è€Œå®ƒå€‘æ’åºçš„æ–¹å¼ç¢ºæ˜¯å€¼å¾—è§€å¯Ÿèˆ‡æ¢è¨çš„ã€‚<br>
+<h2>è§£æ³•</h2>
 <ul>
-  <li>¿ï¾Ü±Æ§Ç</li>
+  <li>é¸æ“‡æ’åº</li>
 </ul>
-<div style="margin-left: 40px;">±N­n±Æ§Çªº¹ï¶H¤À§@¨â³¡¥÷¡A¤@­Ó¬O¤w±Æ§Çªº¡A¤@­Ó¬O¥¼±Æ§Çªº¡A±q«áºİ¥¼±Æ§Ç³¡¥÷¿ï¾Ü¤@­Ó³Ì¤p­È¡A¨Ã©ñ¤J«eºİ¤w±Æ§Ç³¡¥÷ªº³Ì«á¤@­Ó¡A¨Ò¦p¡G<br>
+<div style="margin-left: 40px;">å°‡è¦æ’åºçš„å°è±¡åˆ†ä½œå…©éƒ¨ä»½ï¼Œä¸€å€‹æ˜¯å·²æ’åºçš„ï¼Œä¸€å€‹æ˜¯æœªæ’åºçš„ï¼Œå¾å¾Œç«¯æœªæ’åºéƒ¨ä»½é¸æ“‡ä¸€å€‹æœ€å°å€¼ï¼Œä¸¦æ”¾å…¥å‰ç«¯å·²æ’åºéƒ¨ä»½çš„æœ€å¾Œä¸€å€‹ï¼Œä¾‹å¦‚ï¼š<br>
 </div>
 <br>
-<div style="margin-left: 40px;">±Æ§Ç«e¡G70 80 31 37 10 1 48 60 33 80<br>
+<div style="margin-left: 40px;">æ’åºå‰ï¼š70 80 31 37 10 1 48 60 33 80<br>
 <br>
 <ol>
-  <li>[1] 80 31 37 10 70 48 60 33 80 ¿ï¥X³Ì¤p­È1</li>
-  <li>[1 10] 31 37 80 70 48 60 33 80 ¿ï¥X³Ì¤p­È10</li>
-  <li>[1 10 31] 37 80 70 48 60 33 80 ¿ï¥X³Ì¤p­È31</li>
+  <li>[1] 80 31 37 10 70 48 60 33 80 é¸å‡ºæœ€å°å€¼1</li>
+  <li>[1 10] 31 37 80 70 48 60 33 80 é¸å‡ºæœ€å°å€¼10</li>
+  <li>[1 10 31] 37 80 70 48 60 33 80 é¸å‡ºæœ€å°å€¼31</li>
   <li>[1 10 31 33] 80 70 48 60 37 80 ......</li>
   <li>[1 10 31 33 37] 70 48 60 80 80 ......</li>
   <li>[1 10 31 33 37 48] 70 60 80 80 ......</li>
@@ -81,20 +81,20 @@ Gossip@caterpillar</a></h3>
 </div>
 <br>
 <ul>
-  <li>´¡¤J±Æ§Ç</li>
+  <li>æ’å…¥æ’åº</li>
 </ul>
-<div style="margin-left: 40px;">¹³¬Oª±¾ë§J¤@¼Ë¡A§Ú­Ì±NµP¤À§@¨â°ï¡A¨C¦¸±q«á­±¤@°ïªºµP©â¥X³Ì«eºİªºµP¡AµM«á´¡¤J«e­±¤@°ïµPªº¾A·í¦ì¸m¡A¨Ò¦p¡G<br>
+<div style="margin-left: 40px;">åƒæ˜¯ç©æ¨¸å…‹ä¸€æ¨£ï¼Œæˆ‘å€‘å°‡ç‰Œåˆ†ä½œå…©å †ï¼Œæ¯æ¬¡å¾å¾Œé¢ä¸€å †çš„ç‰ŒæŠ½å‡ºæœ€å‰ç«¯çš„ç‰Œï¼Œç„¶å¾Œæ’å…¥å‰é¢ä¸€å †ç‰Œçš„é©ç•¶ä½ç½®ï¼Œä¾‹å¦‚ï¼š<br>
 </div>
 <br>
-<div style="margin-left: 40px;">±Æ§Ç«e¡G92 77 67 8 6 84 55 85 43 67<br>
+<div style="margin-left: 40px;">æ’åºå‰ï¼š92 77 67 8 6 84 55 85 43 67<br>
 <br>
 <ol>
-  <li>[77 92] 67 8 6 84 55 85 43 67 ±N77´¡¤J92«e</li>
-  <li>[67 77 92] 8 6 84 55 85 43 67 ±N67´¡¤J77«e</li>
-  <li>[8 67 77 92] 6 84 55 85 43 67 ±N8´¡¤J67«e</li>
-  <li>[6 8 67 77 92] 84 55 85 43 67 ±N6´¡¤J8«e</li>
-  <li>[6 8 67 77 84 92] 55 85 43 67 ±N84´¡¤J92«e</li>
-  <li>[6 8 55 67 77 84 92] 85 43 67 ±N55´¡¤J67«e</li>
+  <li>[77 92] 67 8 6 84 55 85 43 67 å°‡77æ’å…¥92å‰</li>
+  <li>[67 77 92] 8 6 84 55 85 43 67 å°‡67æ’å…¥77å‰</li>
+  <li>[8 67 77 92] 6 84 55 85 43 67 å°‡8æ’å…¥67å‰</li>
+  <li>[6 8 67 77 92] 84 55 85 43 67 å°‡6æ’å…¥8å‰</li>
+  <li>[6 8 67 77 84 92] 55 85 43 67 å°‡84æ’å…¥92å‰</li>
+  <li>[6 8 55 67 77 84 92] 85 43 67 å°‡55æ’å…¥67å‰</li>
   <li>[6 8 55 67 77 84 85 92] 43 67 ......</li>
   <li>[6 8 43 55 67 77 84 85 92] 67 ......</li>
   <li>[6 8 43 55 67 67 77 84 85 92] ......</li>
@@ -102,37 +102,37 @@ Gossip@caterpillar</a></h3>
 </div>
 <br>
 <ul>
-  <li>®ğªw±Æ§Çªk</li>
+  <li>æ°£æ³¡æ’åºæ³•</li>
 </ul>
-<div style="margin-left: 40px;">ÅU¦W«ä¸q¡A´N¬O±Æ§Ç®É¡A³Ì¤jªº¤¸¯À·|¦p¦P®ğªw¤@¼Ë²¾¦Ü¥kºİ¡A¨ä§Q¥Î¤ñ¸û¬Û¾F¤¸¯Àªº¤èªk¡A±N¤jªº¤¸¯À¥æ´«¦Ü¥kºİ¡A©Ò¥H¤jªº¤¸¯À·|¤£Â_ªº©¹¥k²¾°Ê¡Aª½¨ì¾A·íªº¦ì¸m¬°¤î¡C<br>
+<div style="margin-left: 40px;">é¡§åæ€ç¾©ï¼Œå°±æ˜¯æ’åºæ™‚ï¼Œæœ€å¤§çš„å…ƒç´ æœƒå¦‚åŒæ°£æ³¡ä¸€æ¨£ç§»è‡³å³ç«¯ï¼Œå…¶åˆ©ç”¨æ¯”è¼ƒç›¸é„°å…ƒç´ çš„æ–¹æ³•ï¼Œå°‡å¤§çš„å…ƒç´ äº¤æ›è‡³å³ç«¯ï¼Œæ‰€ä»¥å¤§çš„å…ƒç´ æœƒä¸æ–·çš„å¾€å³ç§»å‹•ï¼Œç›´åˆ°é©ç•¶çš„ä½ç½®ç‚ºæ­¢ã€‚<br>
 </div>
 <div style="margin-left: 40px;"><br>
-°ò¥»ªº®ğªw±Æ§Çªk¥i¥H§Q¥ÎºX¼Ğªº¤è¦¡µy·L´î¤Ö¤@¨Ç¤ñ¸ûªº®É¶¡¡A·í´M³X§¹°}¦C«á³£¨S¦³µo¥Í¥ô¦óªº¥æ´«°Ê§@¡Aªí¥Ü±Æ§Ç¤w¸g§¹¦¨¡A¦ÓµL»İ¦A¶i¦æ¤§«áªº°j°é¤ñ¸û»P¥æ´«°Ê§@¡A¨Ò¦p¡G<br>
+åŸºæœ¬çš„æ°£æ³¡æ’åºæ³•å¯ä»¥åˆ©ç”¨æ——æ¨™çš„æ–¹å¼ç¨å¾®æ¸›å°‘ä¸€äº›æ¯”è¼ƒçš„æ™‚é–“ï¼Œç•¶å°‹è¨ªå®Œé™£åˆ—å¾Œéƒ½æ²’æœ‰ç™¼ç”Ÿä»»ä½•çš„äº¤æ›å‹•ä½œï¼Œè¡¨ç¤ºæ’åºå·²ç¶“å®Œæˆï¼Œè€Œç„¡éœ€å†é€²è¡Œä¹‹å¾Œçš„è¿´åœˆæ¯”è¼ƒèˆ‡äº¤æ›å‹•ä½œï¼Œä¾‹å¦‚ï¼š<br>
 <br>
-±Æ§Ç«e¡G95 27 90 49 80 58 6 9 18 50<br>
+æ’åºå‰ï¼š95 27 90 49 80 58 6 9 18 50<br>
 <br>
 <ol>
-  <li>27 90 49 80 58 6 9 18 50 [95] 95¯B¥X</li>
-  <li>27 49 80 58 6 9 18 50 [90 95] 90¯B¥X</li>
-  <li>27 49 58 6 9 18 50 [80 90 95] 80¯B¥X</li>
+  <li>27 90 49 80 58 6 9 18 50 [95] 95æµ®å‡º</li>
+  <li>27 49 80 58 6 9 18 50 [90 95] 90æµ®å‡º</li>
+  <li>27 49 58 6 9 18 50 [80 90 95] 80æµ®å‡º</li>
   <li>27 49 6 9 18 50 [58 80 90 95] ......</li>
   <li>27 6 9 18 49 [50 58 80 90 95] ......</li>
   <li>6 9 18 27 [49 50 58 80 90 95] ......</li>
-  <li>6 9 18 [27 49 50 58 80 90 95] ¥Ñ©ó±µ¤U¨Ó¤£·|¦Aµo¥Í¥æ´«°Ê§@¡A±Æ§Ç´£¦­µ²§ô</li>
+  <li>6 9 18 [27 49 50 58 80 90 95] ç”±æ–¼æ¥ä¸‹ä¾†ä¸æœƒå†ç™¼ç”Ÿäº¤æ›å‹•ä½œï¼Œæ’åºææ—©çµæŸ</li>
 </ol>
 <br>
-¦b¤W­±ªº¨Ò¤l·í¤¤¡AÁÙ¥[¤J¤F¤@­ÓÆ[©À¡A´N¬O·í¶i¦æ¦Üi»Pi+1®É¨S¦³¥æ´«ªº°Ê§@¡Aªí¥Ü±µ¤U¨Óªºi+2¦Ün¤w¸g±Æ§Ç§¹²¦¡A³o¤]¼W¶i¤F®ğªw±Æ§Çªº®Ä²v¡C <br>
+åœ¨ä¸Šé¢çš„ä¾‹å­ç•¶ä¸­ï¼Œé‚„åŠ å…¥äº†ä¸€å€‹è§€å¿µï¼Œå°±æ˜¯ç•¶é€²è¡Œè‡³ièˆ‡i+1æ™‚æ²’æœ‰äº¤æ›çš„å‹•ä½œï¼Œè¡¨ç¤ºæ¥ä¸‹ä¾†çš„i+2è‡³nå·²ç¶“æ’åºå®Œç•¢ï¼Œé€™ä¹Ÿå¢é€²äº†æ°£æ³¡æ’åºçš„æ•ˆç‡ã€‚ <br>
 </div>
 
 <br>
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 <ul>
   <li> C
   </li>
 </ul>
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#include &lt;time.h&gt; <br>#define MAX 10 <br>#define SWAP(x,y) {int t; t = x; x = y; y = t;} <br><br>void selsort(int[]);  // ¿ï¾Ü±Æ§Ç <br>void insort(int[]);   // ´¡¤J±Æ§Ç <br>void bubsort(int[]);  // ®ğªw±Æ§Ç <br><br>int main(void) {  <br>    int number[MAX] = {0}; <br>    int i;  <br><br>    srand(time(NULL)); <br><br>    printf("±Æ§Ç«e¡G"); <br>    for(i = 0; i &lt; MAX; i++) { <br>        number[i] = rand() % 100; <br>        printf("%d ", number[i]); <br>    } <br><br>    printf("\n½Ğ¿ï¾Ü±Æ§Ç¤è¦¡¡G\n"); <br>    printf("(1)¿ï¾Ü±Æ§Ç\n(2)´¡¤J±Æ§Ç\n(3)®ğªw±Æ§Ç\n:"); <br>    scanf("%d", &amp;i); <br><br>    switch(i) { <br>        case 1: <br>            selsort(number); break; <br>        case 2: <br>            insort(number); break; <br>        case 3: <br>            bubsort(number); break; <br>        default: <br>            printf("¿ï¶µ¿ù»~(1..3)\n"); <br>    } <br><br>    return 0; <br>} <br><br>void selsort(int number[]) { <br>    int i, j, k, m; <br><br>    for(i = 0; i &lt; MAX-1; i++) { <br>        m = i; <br>        for(j = i+1; j &lt; MAX; j++) <br>            if(number[j] &lt; number[m]) <br>                m = j; <br><br>        if( i != m) <br>            SWAP(number[i], number[m]) <br><br>        printf("²Ä %d ¦¸±Æ§Ç¡G", i+1); <br>        for(k = 0; k &lt; MAX; k++) <br>            printf("%d ", number[k]); <br>        printf("\n"); <br>    } <br> } <br><br> void insort(int number[]) { <br>    int i, j, k, tmp; <br><br>    for(j = 1; j &lt; MAX; j++) { <br>        tmp = number[j]; <br>        i = j - 1; <br>        while(tmp &lt; number[i]) { <br>            number[i+1] = number[i]; <br>            i--; <br>            if(i == -1) <br>                break; <br>        } <br>        number[i+1] = tmp; <br><br>        printf("²Ä %d ¦¸±Æ§Ç¡G", j); <br>        for(k = 0; k &lt; MAX; k++) <br>            printf("%d ", number[k]); <br>        printf("\n"); <br>    } <br>} <br><br>void bubsort(int number[]) { <br>    int i, j, k, flag = 1; <br><br>    for(i = 0; i &lt; MAX-1 &amp;&amp; flag == 1; i++) { <br>        flag = 0; <br>        for(j = 0; j &lt; MAX-i-1; j++) { <br>            if(number[j+1] &lt; number[j]) { <br>                SWAP(number[j+1], number[j]); <br>                flag = 1; <br>            } <br>        } <br><br>        printf("²Ä %d ¦¸±Æ§Ç¡G", i+1); <br>        for(k = 0; k &lt; MAX; k++) <br>            printf("%d ", number[k]); <br>        printf("\n"); <br>    } <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#include &lt;time.h&gt; <br>#define MAX 10 <br>#define SWAP(x,y) {int t; t = x; x = y; y = t;} <br><br>void selsort(int[]);  // é¸æ“‡æ’åº <br>void insort(int[]);   // æ’å…¥æ’åº <br>void bubsort(int[]);  // æ°£æ³¡æ’åº <br><br>int main(void) {  <br>    int number[MAX] = {0}; <br>    int i;  <br><br>    srand(time(NULL)); <br><br>    printf("æ’åºå‰ï¼š"); <br>    for(i = 0; i &lt; MAX; i++) { <br>        number[i] = rand() % 100; <br>        printf("%d ", number[i]); <br>    } <br><br>    printf("\nè«‹é¸æ“‡æ’åºæ–¹å¼ï¼š\n"); <br>    printf("(1)é¸æ“‡æ’åº\n(2)æ’å…¥æ’åº\n(3)æ°£æ³¡æ’åº\n:"); <br>    scanf("%d", &amp;i); <br><br>    switch(i) { <br>        case 1: <br>            selsort(number); break; <br>        case 2: <br>            insort(number); break; <br>        case 3: <br>            bubsort(number); break; <br>        default: <br>            printf("é¸é …éŒ¯èª¤(1..3)\n"); <br>    } <br><br>    return 0; <br>} <br><br>void selsort(int number[]) { <br>    int i, j, k, m; <br><br>    for(i = 0; i &lt; MAX-1; i++) { <br>        m = i; <br>        for(j = i+1; j &lt; MAX; j++) <br>            if(number[j] &lt; number[m]) <br>                m = j; <br><br>        if( i != m) <br>            SWAP(number[i], number[m]) <br><br>        printf("ç¬¬ %d æ¬¡æ’åºï¼š", i+1); <br>        for(k = 0; k &lt; MAX; k++) <br>            printf("%d ", number[k]); <br>        printf("\n"); <br>    } <br> } <br><br> void insort(int number[]) { <br>    int i, j, k, tmp; <br><br>    for(j = 1; j &lt; MAX; j++) { <br>        tmp = number[j]; <br>        i = j - 1; <br>        while(tmp &lt; number[i]) { <br>            number[i+1] = number[i]; <br>            i--; <br>            if(i == -1) <br>                break; <br>        } <br>        number[i+1] = tmp; <br><br>        printf("ç¬¬ %d æ¬¡æ’åºï¼š", j); <br>        for(k = 0; k &lt; MAX; k++) <br>            printf("%d ", number[k]); <br>        printf("\n"); <br>    } <br>} <br><br>void bubsort(int number[]) { <br>    int i, j, k, flag = 1; <br><br>    for(i = 0; i &lt; MAX-1 &amp;&amp; flag == 1; i++) { <br>        flag = 0; <br>        for(j = 0; j &lt; MAX-i-1; j++) { <br>            if(number[j+1] &lt; number[j]) { <br>                SWAP(number[j+1], number[j]); <br>                flag = 1; <br>            } <br>        } <br><br>        printf("ç¬¬ %d æ¬¡æ’åºï¼š", i+1); <br>        for(k = 0; k &lt; MAX; k++) <br>            printf("%d ", number[k]); <br>        printf("\n"); <br>    } <br>} <br></pre>
 
 <p></p>
 
