--- a/AlgorithmGossip/ScoreRank.htm
+++ b/AlgorithmGossip/ScoreRank.htm
@@ -33,7 +33,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -44,7 +44,7 @@
   
   
   
-  <title>±o¤À±Æ¦æ</title>
+  <title>å¾—åˆ†æ’è¡Œ</title>
 </head>
 
 
@@ -61,19 +61,19 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: ±o¤À±Æ¦æ</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: å¾—åˆ†æ’è¡Œ</a></h1>
 
 
 
 
 
-<h2>»¡©ú</h2>
+<h2>èªªæ˜</h2>
 
-°²³]¦³¤@±Ğ®v¨Ì¾Ç¥Í®y¸¹¿é¤J¦Ò¸Õ¤À¼Æ¡A²{§Æ±æ¦b¿é¤J§¹²¦«á¦Û°ÊÅã¥Ü¾Ç¥Í¤À¼Æªº±Æ¦æ¡A·íµM¾Ç¥Íªº¤À¼Æ¥i¯à¬Û¦P¡C<br>
+å‡è¨­æœ‰ä¸€æ•™å¸«ä¾å­¸ç”Ÿåº§è™Ÿè¼¸å…¥è€ƒè©¦åˆ†æ•¸ï¼Œç¾å¸Œæœ›åœ¨è¼¸å…¥å®Œç•¢å¾Œè‡ªå‹•é¡¯ç¤ºå­¸ç”Ÿåˆ†æ•¸çš„æ’è¡Œï¼Œç•¶ç„¶å­¸ç”Ÿçš„åˆ†æ•¸å¯èƒ½ç›¸åŒã€‚<br>
 
-<h2>¸Ñªk</h2>
+<h2>è§£æ³•</h2>
 
-³o­Ó°İÃD°ò¥»¤W­n¸Ñ¤£Ãø¡A¥u­n¨Ï¥ÎÃB¥~ªº¤@­Ó±Æ¦æ°}¦C¨«³X¤À¼Æ°}¦C´N¥i¥H¤F¡Aª½±µ¨Ï¥Î¤U­±ªºµ{¦¡¤ù¬q§@»¡©ú¡G<br>
+é€™å€‹å•é¡ŒåŸºæœ¬ä¸Šè¦è§£ä¸é›£ï¼Œåªè¦ä½¿ç”¨é¡å¤–çš„ä¸€å€‹æ’è¡Œé™£åˆ—èµ°è¨ªåˆ†æ•¸é™£åˆ—å°±å¯ä»¥äº†ï¼Œç›´æ¥ä½¿ç”¨ä¸‹é¢çš„ç¨‹å¼ç‰‡æ®µä½œèªªæ˜ï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">for(i = 0; i &lt; count; i++) { </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
@@ -91,7 +91,7 @@ Gossip@caterpillar</a></h3>
 
 <br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
-<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">printf("±o¤À\t±Æ¦æ\n"); </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
+<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">printf("å¾—åˆ†\tæ’è¡Œ\n"); </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
 <span style="font-weight: bold; font-family: Courier New,Courier,monospace;">for(i = 0; i &lt; count; i++) </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
@@ -103,33 +103,33 @@ Gossip@caterpillar</a></h3>
 
 &nbsp;<br>
 
-¤W­±³o­Ó¤èªkÁöµMÂ²³æ¡A¦ı¬O¤ÏÂĞ­pºâªº¦¸¼Æ¬On^2¡A¦pªGn­ÈÅÜ¤j¡A¨º»ò¹Bºâªº®É¶¡´N·|©ìªø¡F§ïÅÜjuni°}¦Cªºªø«×¬°n+2¡A¨Ã±Nªì©l­È³]©w¬°0¡A¦p¤U©Ò¥Ü¡G <br>
+ä¸Šé¢é€™å€‹æ–¹æ³•é›–ç„¶ç°¡å–®ï¼Œä½†æ˜¯åè¦†è¨ˆç®—çš„æ¬¡æ•¸æ˜¯n^2ï¼Œå¦‚æœnå€¼è®Šå¤§ï¼Œé‚£éº¼é‹ç®—çš„æ™‚é–“å°±æœƒæ‹–é•·ï¼›æ”¹è®Šjunié™£åˆ—çš„é•·åº¦ç‚ºn+2ï¼Œä¸¦å°‡åˆå§‹å€¼è¨­å®šç‚º0ï¼Œå¦‚ä¸‹æ‰€ç¤ºï¼š <br>
 
 
-<div style="text-align: center;"><img style="width: 418px; height: 61px;" alt="±o¤À±Æ¦æ" title="±o¤À±Æ¦æ" src="images/scoreRank-1.jpg"></div>
-
-<br>
-
-
-±µ¤U¨Ó¨«³X¤À¼Æ°}¦C¡A¨Ã¦b¤À¼Æ©Ò¹ïÀ³ªº±Æ¦æ°}¦C¯Á¤Ş¤¸¯À¤W¥[1¡A¦p¤U©Ò¥Ü¡G<br>
-
-<div style="text-align: center;"><img style="width: 418px; height: 64px;" alt="±o¤À±Æ¦æ" title="±o¤À±Æ¦æ" src="images/scoreRank-2.jpg"></div>
+<div style="text-align: center;"><img style="width: 418px; height: 61px;" alt="å¾—åˆ†æ’è¡Œ" title="å¾—åˆ†æ’è¡Œ" src="images/scoreRank-1.jpg"></div>
 
 <br>
 
-±N±Æ¦æ°}¦C³Ì¥kÃäªº¤¸¯À³]©w¬°1¡AµM«á¨Ì§Ç±N¥kÃäªº¤¸¯À­È¥[¦Ü¥ªÃä¤@­Ó¤¸¯À¡A³Ì«á±Æ¦æ°}¦C¤¤ªº¡u¤À¼Æ+1¡v¡v´N¬O±o¸Ó¤À¼Æªº±Æ¦æ¡A¦p¤U©Ò¥Ü¡G <br>
 
-<div style="text-align: center;"><img style="width: 482px; height: 157px;" alt="±o¤À±Æ¦æ" title="±o¤À±Æ¦æ" src="images/scoreRank-3.jpg"></div>
+æ¥ä¸‹ä¾†èµ°è¨ªåˆ†æ•¸é™£åˆ—ï¼Œä¸¦åœ¨åˆ†æ•¸æ‰€å°æ‡‰çš„æ’è¡Œé™£åˆ—ç´¢å¼•å…ƒç´ ä¸ŠåŠ 1ï¼Œå¦‚ä¸‹æ‰€ç¤ºï¼š<br>
 
-³o¼Ëªº¤è¦¡¬İ°_¨Ó½ÆÂø¡A¨ä¹ê¤£¹L¦b­pºâ¬Y¤À¼Æ¤§«e±Æ¦æªº¤H¼Æ¡A°²³]89¤À¤§«eªº±Æ¦æ¤H¼Æ¬°x¤H¡A«h89¤À¦ÛµM´N¬Ox+1¤F¡A³o¤]¬O¬°¤°»ò±Æ¦æ°}¦C³Ì¥kÃä­n³]©w¬°1ªº­ì¦]¡F¦pªG89¤À¦³y¤H¡A«h88¤À¦ÛµM´N¬Ox+y+1¡A¾ã­Ó°}¦C¥kÃä¤¸¯À¦V¥ª¥[ªº­ì¦]¥¿¬O¦p¦¹¡C<br>
-
-<br>
-
-¦pªG¤À¼Æ¦³­t¤Àªº±¡ªp¡A¥Ñ©óC/C++©ÎJavaµ¥µ{¦¡»y¨¥µLªk³B²z­tªº¯Á¤Ş¡A©Ò¥H¥²¶·¥[¤W¤@­Ó°¾²¾­È¡A±N©Ò¦³ªº¤À¼Æ¥ı©¹¥k°¾²¾¤@­Ó½d³ò§Y¥i¡A³Ì«áÅã¥Üªº®É­Ô°O±o´î¦^°¾²¾­È´N¥i¥H¤F¡C <br>
+<div style="text-align: center;"><img style="width: 418px; height: 64px;" alt="å¾—åˆ†æ’è¡Œ" title="å¾—åˆ†æ’è¡Œ" src="images/scoreRank-2.jpg"></div>
 
 <br>
 
-<h2> ¹ê§@</h2>
+å°‡æ’è¡Œé™£åˆ—æœ€å³é‚Šçš„å…ƒç´ è¨­å®šç‚º1ï¼Œç„¶å¾Œä¾åºå°‡å³é‚Šçš„å…ƒç´ å€¼åŠ è‡³å·¦é‚Šä¸€å€‹å…ƒç´ ï¼Œæœ€å¾Œæ’è¡Œé™£åˆ—ä¸­çš„ã€Œåˆ†æ•¸+1ã€ã€å°±æ˜¯å¾—è©²åˆ†æ•¸çš„æ’è¡Œï¼Œå¦‚ä¸‹æ‰€ç¤ºï¼š <br>
+
+<div style="text-align: center;"><img style="width: 482px; height: 157px;" alt="å¾—åˆ†æ’è¡Œ" title="å¾—åˆ†æ’è¡Œ" src="images/scoreRank-3.jpg"></div>
+
+é€™æ¨£çš„æ–¹å¼çœ‹èµ·ä¾†è¤‡é›œï¼Œå…¶å¯¦ä¸éåœ¨è¨ˆç®—æŸåˆ†æ•¸ä¹‹å‰æ’è¡Œçš„äººæ•¸ï¼Œå‡è¨­89åˆ†ä¹‹å‰çš„æ’è¡Œäººæ•¸ç‚ºxäººï¼Œå‰‡89åˆ†è‡ªç„¶å°±æ˜¯x+1äº†ï¼Œé€™ä¹Ÿæ˜¯ç‚ºä»€éº¼æ’è¡Œé™£åˆ—æœ€å³é‚Šè¦è¨­å®šç‚º1çš„åŸå› ï¼›å¦‚æœ89åˆ†æœ‰yäººï¼Œå‰‡88åˆ†è‡ªç„¶å°±æ˜¯x+y+1ï¼Œæ•´å€‹é™£åˆ—å³é‚Šå…ƒç´ å‘å·¦åŠ çš„åŸå› æ­£æ˜¯å¦‚æ­¤ã€‚<br>
+
+<br>
+
+å¦‚æœåˆ†æ•¸æœ‰è² åˆ†çš„æƒ…æ³ï¼Œç”±æ–¼C/C++æˆ–Javaç­‰ç¨‹å¼èªè¨€ç„¡æ³•è™•ç†è² çš„ç´¢å¼•ï¼Œæ‰€ä»¥å¿…é ˆåŠ ä¸Šä¸€å€‹åç§»å€¼ï¼Œå°‡æ‰€æœ‰çš„åˆ†æ•¸å…ˆå¾€å³åç§»ä¸€å€‹ç¯„åœå³å¯ï¼Œæœ€å¾Œé¡¯ç¤ºçš„æ™‚å€™è¨˜å¾—æ¸›å›åç§»å€¼å°±å¯ä»¥äº†ã€‚ <br>
+
+<br>
+
+<h2> å¯¦ä½œ</h2>
 
 
 <ul>
@@ -139,7 +139,7 @@ Gossip@caterpillar</a></h3>
 </ul>
 
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#define MAX 100 <br>#define MIN 0 <br><br>int main(void) { <br>    int score[MAX+1] = {0}; <br>    int juni[MAX+2] = {0}; <br>    int count = 0, i; <br><br>    do { <br>       printf("¿é¤J¤À¼Æ¡A-1µ²§ô¡G"); <br>       scanf("%d", &amp;score[count++]); <br>    } while(score[count-1] != -1);<br><br>    count--; <br><br>    for(i = 0; i &lt; count; i++) <br>        juni[score[i]]++; <br>    juni[MAX+1] = 1; <br><br>    for(i = MAX; i &gt;= MIN; i--) <br>        juni[i] = juni[i] + juni[i+1]; <br><br>    printf("±o¤À\t±Æ¦æ\n"); <br>    for(i = 0; i &lt; count; i++) <br>        printf("%d\t%d\n", score[i], juni[score[i]+1]); <br><br>    return 0; <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#define MAX 100 <br>#define MIN 0 <br><br>int main(void) { <br>    int score[MAX+1] = {0}; <br>    int juni[MAX+2] = {0}; <br>    int count = 0, i; <br><br>    do { <br>       printf("è¼¸å…¥åˆ†æ•¸ï¼Œ-1çµæŸï¼š"); <br>       scanf("%d", &amp;score[count++]); <br>    } while(score[count-1] != -1);<br><br>    count--; <br><br>    for(i = 0; i &lt; count; i++) <br>        juni[score[i]]++; <br>    juni[MAX+1] = 1; <br><br>    for(i = MAX; i &gt;= MIN; i--) <br>        juni[i] = juni[i] + juni[i+1]; <br><br>    printf("å¾—åˆ†\tæ’è¡Œ\n"); <br>    for(i = 0; i &lt; count; i++) <br>        printf("%d\t%d\n", score[i], juni[score[i]+1]); <br><br>    return 0; <br>} <br></pre>
 
 
 <br>
@@ -152,7 +152,7 @@ Gossip@caterpillar</a></h3>
 </ul>
 
 
-<pre>import java.io.*;<br><br>public class ScoreRank {<br>    public static void main(String[] args) <br>                 throws NumberFormatException, IOException {<br>        final int MAX = 100;<br>        final int MIN = 0;<br>		<br>        int[] score = new int[MAX+1]; <br>        int[] juni = new int[MAX+2];<br>	    <br>        BufferedReader reader = <br>	    	new BufferedReader(<br>                       new InputStreamReader(System.in));<br>        int count = 0; <br><br>        do { <br>            System.out.print("¿é¤J¤À¼Æ¡A-1µ²§ô¡G"); <br>            score[count++] = <br>                      Integer.parseInt(reader.readLine()); <br>        } while((score[count-1] != -1));<br><br>        count--; <br><br>        for(int i = 0; i &lt; count; i++) <br>            juni[score[i]]++; <br>        juni[MAX+1] = 1; <br><br>        for(int i = MAX; i &gt;= MIN; i--) <br>            juni[i] = juni[i] + juni[i+1]; <br><br>        System.out.println("±o¤À\t±Æ¦æ"); <br>        for(int i = 0; i &lt; count; i++) {<br>            System.out.println(score[i] + "\t" + <br>                             juni[score[i]+1]); <br>        }<br>    }<br>} </pre>
+<pre>import java.io.*;<br><br>public class ScoreRank {<br>    public static void main(String[] args) <br>                 throws NumberFormatException, IOException {<br>        final int MAX = 100;<br>        final int MIN = 0;<br>		<br>        int[] score = new int[MAX+1]; <br>        int[] juni = new int[MAX+2];<br>	    <br>        BufferedReader reader = <br>	    	new BufferedReader(<br>                       new InputStreamReader(System.in));<br>        int count = 0; <br><br>        do { <br>            System.out.print("è¼¸å…¥åˆ†æ•¸ï¼Œ-1çµæŸï¼š"); <br>            score[count++] = <br>                      Integer.parseInt(reader.readLine()); <br>        } while((score[count-1] != -1));<br><br>        count--; <br><br>        for(int i = 0; i &lt; count; i++) <br>            juni[score[i]]++; <br>        juni[MAX+1] = 1; <br><br>        for(int i = MAX; i &gt;= MIN; i--) <br>            juni[i] = juni[i] + juni[i+1]; <br><br>        System.out.println("å¾—åˆ†\tæ’è¡Œ"); <br>        for(int i = 0; i &lt; count; i++) {<br>            System.out.println(score[i] + "\t" + <br>                             juni[score[i]+1]); <br>        }<br>    }<br>} </pre>
 
 <br>
 
