--- a/AlgorithmGossip/RadixSort.htm
+++ b/AlgorithmGossip/RadixSort.htm
@@ -39,7 +39,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -52,7 +52,7 @@
   
   
   
-  <title>°ò¼Æ±Æ§Çªk</title>
+  <title>åŸºæ•¸æŽ’åºæ³•</title>
 </head>
 
 
@@ -71,38 +71,38 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;°ò¼Æ±Æ§Çªk</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;åŸºæ•¸æŽ’åºæ³•</a></h1>
 
 
 
 
 
 
-<h2>»¡©ú</h2>
+<h2>èªªæ˜Ž</h2>
 
 
-¦b¤§«e©Ò¤¶²Ð¹Lªº±Æ§Ç¤èªk¡A³£¬OÄÝ©ó¡u¤ñ¸û©Ê¡vªº±Æ§Çªk¡A¤]´N¬O¨C¦¸±Æ§Ç®É ¡A³£¬O¤ñ¸û¾ã­ÓÁä­Èªº¤j¤p¥H¶i¦æ±Æ§Ç¡C<br>
-
-
-<br>
-
-
-³oÃä©Ò­n¤¶²Ðªº¡u°ò¼Æ±Æ§Çªk¡v¡]radix sort¡^«h¬OÄÝ©ó¡u¤À°t¦¡±Æ§Ç¡v¡]distribution
-sort¡^¡A°ò¼Æ±Æ§Çªk¤SºÙ¡u±í¤lªk¡v¡]bucket sort¡^©Îbin
-sort¡AÅU¦W«ä¸q¡A¥¦¬O³z¹LÁä­Èªº³¡¥÷¸ê°T¡A±N­n±Æ§Çªº¤¸¯À¤À°t¦Ü¬Y¨Ç¡u±í¡v¤¤¡AÂÇ¥H¹F¨ì±Æ§Çªº§@¥Î¡A°ò¼Æ±Æ§Çªk¬OÄÝ©óÃ­©w©Êªº±Æ§Ç¡A¨ä®É¶¡½ÆÂø«×¬°O
-(nlog(r)m)¡A¨ä¤¤r¬°©Ò±Ä¨úªº°ò¼Æ¡A¦Óm¬°°ï¼Æ¡A¦b¬Y¨Ç®É­Ô¡A°ò¼Æ±Æ§Çªkªº®Ä²v°ª©ó¨ä¥¦ªº¤ñ¸û©Ê±Æ§Çªk¡C<br>
-
-
-<h2>¸Ñªk</h2>
-
-
-°ò¼Æ±Æ§Çªº¤è¦¡¥i¥H±Ä¥ÎLSD¡]Least sgnificant digital¡^©ÎMSD¡]Most sgnificant digital¡^¡ALSDªº±Æ§Ç¤è¦¡¥ÑÁä­Èªº³Ì¥kÃä¶}©l¡A¦ÓMSD«h¬Û¤Ï¡A¥ÑÁä­Èªº³Ì¥ªÃä¶}©l¡C<br>
+åœ¨ä¹‹å‰æ‰€ä»‹ç´¹éŽçš„æŽ’åºæ–¹æ³•ï¼Œéƒ½æ˜¯å±¬æ–¼ã€Œæ¯”è¼ƒæ€§ã€çš„æŽ’åºæ³•ï¼Œä¹Ÿå°±æ˜¯æ¯æ¬¡æŽ’åºæ™‚ ï¼Œéƒ½æ˜¯æ¯”è¼ƒæ•´å€‹éµå€¼çš„å¤§å°ä»¥é€²è¡ŒæŽ’åºã€‚<br>
 
 
 <br>
 
 
-¥HLSD¬°¨Ò¡A°²³]­ì¨Ó¦³¤@¦ê¼Æ­È¦p¤U©Ò¥Ü¡G<br>
+é€™é‚Šæ‰€è¦ä»‹ç´¹çš„ã€ŒåŸºæ•¸æŽ’åºæ³•ã€ï¼ˆradix sortï¼‰å‰‡æ˜¯å±¬æ–¼ã€Œåˆ†é…å¼æŽ’åºã€ï¼ˆdistribution
+sortï¼‰ï¼ŒåŸºæ•¸æŽ’åºæ³•åˆç¨±ã€Œæ¡¶å­æ³•ã€ï¼ˆbucket sortï¼‰æˆ–bin
+sortï¼Œé¡§åæ€ç¾©ï¼Œå®ƒæ˜¯é€éŽéµå€¼çš„éƒ¨ä»½è³‡è¨Šï¼Œå°‡è¦æŽ’åºçš„å…ƒç´ åˆ†é…è‡³æŸäº›ã€Œæ¡¶ã€ä¸­ï¼Œè—‰ä»¥é”åˆ°æŽ’åºçš„ä½œç”¨ï¼ŒåŸºæ•¸æŽ’åºæ³•æ˜¯å±¬æ–¼ç©©å®šæ€§çš„æŽ’åºï¼Œå…¶æ™‚é–“è¤‡é›œåº¦ç‚ºO
+(nlog(r)m)ï¼Œå…¶ä¸­rç‚ºæ‰€æŽ¡å–çš„åŸºæ•¸ï¼Œè€Œmç‚ºå †æ•¸ï¼Œåœ¨æŸäº›æ™‚å€™ï¼ŒåŸºæ•¸æŽ’åºæ³•çš„æ•ˆçŽ‡é«˜æ–¼å…¶å®ƒçš„æ¯”è¼ƒæ€§æŽ’åºæ³•ã€‚<br>
+
+
+<h2>è§£æ³•</h2>
+
+
+åŸºæ•¸æŽ’åºçš„æ–¹å¼å¯ä»¥æŽ¡ç”¨LSDï¼ˆLeast sgnificant digitalï¼‰æˆ–MSDï¼ˆMost sgnificant digitalï¼‰ï¼ŒLSDçš„æŽ’åºæ–¹å¼ç”±éµå€¼çš„æœ€å³é‚Šé–‹å§‹ï¼Œè€ŒMSDå‰‡ç›¸åï¼Œç”±éµå€¼çš„æœ€å·¦é‚Šé–‹å§‹ã€‚<br>
+
+
+<br>
+
+
+ä»¥LSDç‚ºä¾‹ï¼Œå‡è¨­åŽŸä¾†æœ‰ä¸€ä¸²æ•¸å€¼å¦‚ä¸‹æ‰€ç¤ºï¼š<br>
 
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">73, 22, 93, 43, 55, 14, 28, 65, 39, 81</span><br>
@@ -114,7 +114,7 @@ sort¡AÅU¦W«ä¸q¡A¥¦¬O³z¹LÁä­Èªº³¡¥÷¸ê°T¡A±N­n±Æ§Çªº¤¸¯À¤À°t¦Ü¬Y¨Ç¡u±í¡v¤¤¡AÂÇ¥H¹F
 <br>
 
 
-­º¥ý®Ú¾Ú­Ó¦ì¼Æªº¼Æ­È¡A¦b¨«³X¼Æ­È®É±N¥¦­Ì¤À°t¦Ü½s¸¹0¨ì9ªº±í¤l¤¤¡G<br>
+é¦–å…ˆæ ¹æ“šå€‹ä½æ•¸çš„æ•¸å€¼ï¼Œåœ¨èµ°è¨ªæ•¸å€¼æ™‚å°‡å®ƒå€‘åˆ†é…è‡³ç·¨è™Ÿ0åˆ°9çš„æ¡¶å­ä¸­ï¼š<br>
 
 
 
@@ -399,7 +399,7 @@ sort¡AÅU¦W«ä¸q¡A¥¦¬O³z¹LÁä­Èªº³¡¥÷¸ê°T¡A±N­n±Æ§Çªº¤¸¯À¤À°t¦Ü¬Y¨Ç¡u±í¡v¤¤¡AÂÇ¥H¹F
 
 <br>
 
-±µ¤U¨Ó±N³o¨Ç±í¤l¤¤ªº¼Æ­È­«·s¦ê±µ°_¨Ó¡A¦¨¬°¥H¤Uªº¼Æ¦C¡G <br>
+æŽ¥ä¸‹ä¾†å°‡é€™äº›æ¡¶å­ä¸­çš„æ•¸å€¼é‡æ–°ä¸²æŽ¥èµ·ä¾†ï¼Œæˆç‚ºä»¥ä¸‹çš„æ•¸åˆ—ï¼š <br>
 
 
 <em><strong></strong></em>
@@ -410,7 +410,7 @@ sort¡AÅU¦W«ä¸q¡A¥¦¬O³z¹LÁä­Èªº³¡¥÷¸ê°T¡A±N­n±Æ§Çªº¤¸¯À¤À°t¦Ü¬Y¨Ç¡u±í¡v¤¤¡AÂÇ¥H¹F
 
 <br>
 
-±µµÛ¦A¶i¦æ¤@¦¸¤À°t¡A³o¦¸¬O®Ú¾Ú¤Q¦ì¼Æ¨Ó¤À°t¡G<br>
+æŽ¥è‘—å†é€²è¡Œä¸€æ¬¡åˆ†é…ï¼Œé€™æ¬¡æ˜¯æ ¹æ“šåä½æ•¸ä¾†åˆ†é…ï¼š<br>
 
 
 <table border="1" width="100%">
@@ -565,7 +565,7 @@ sort¡AÅU¦W«ä¸q¡A¥¦¬O³z¹LÁä­Èªº³¡¥÷¸ê°T¡A±N­n±Æ§Çªº¤¸¯À¤À°t¦Ü¬Y¨Ç¡u±í¡v¤¤¡AÂÇ¥H¹F
 
 <br>
 
-±µ¤U¨Ó±N³o¨Ç±í¤l¤¤ªº¼Æ­È­«·s¦ê±µ°_¨Ó¡A¦¨¬°¥H¤Uªº¼Æ¦C¡G <br>
+æŽ¥ä¸‹ä¾†å°‡é€™äº›æ¡¶å­ä¸­çš„æ•¸å€¼é‡æ–°ä¸²æŽ¥èµ·ä¾†ï¼Œæˆç‚ºä»¥ä¸‹çš„æ•¸åˆ—ï¼š <br>
 
 
 <em><strong></strong></em>
@@ -576,15 +576,15 @@ sort¡AÅU¦W«ä¸q¡A¥¦¬O³z¹LÁä­Èªº³¡¥÷¸ê°T¡A±N­n±Æ§Çªº¤¸¯À¤À°t¦Ü¬Y¨Ç¡u±í¡v¤¤¡AÂÇ¥H¹F
 
 <br>
 
-³o®É­Ô¾ã­Ó¼Æ¦C¤w¸g±Æ§Ç§¹²¦¡F¦pªG±Æ§Çªº¹ï¶H¦³¤T¦ì¼Æ¥H¤W¡A«h«ùÄò¶i¦æ¥H¤Wªº°Ê§@ª½¦Ü³Ì°ª¦ì¼Æ¬°¤î¡C <br>
+é€™æ™‚å€™æ•´å€‹æ•¸åˆ—å·²ç¶“æŽ’åºå®Œç•¢ï¼›å¦‚æžœæŽ’åºçš„å°è±¡æœ‰ä¸‰ä½æ•¸ä»¥ä¸Šï¼Œå‰‡æŒçºŒé€²è¡Œä»¥ä¸Šçš„å‹•ä½œç›´è‡³æœ€é«˜ä½æ•¸ç‚ºæ­¢ã€‚ <br>
 
 <br>
 
-LSDªº°ò¼Æ±Æ§Ç¾A¥Î©ó¦ì¼Æ¤pªº¼Æ¦C¡A¦pªG¦ì¼Æ¦hªº¸Ü¡A¨Ï¥ÎMSDªº®Ä²v·|¤ñ¸û¦n¡AMSDªº¤è¦¡«ê»PLSD¬Û¤Ï¡A¬O¥Ñ°ª¦ì¼Æ¬°°ò©³¶}©l¶i¦æ¤À°t¡A¨ä¥Lªººt
-ºâ¤è¦¡«h³£¬Û¦P¡C <br>
+LSDçš„åŸºæ•¸æŽ’åºé©ç”¨æ–¼ä½æ•¸å°çš„æ•¸åˆ—ï¼Œå¦‚æžœä½æ•¸å¤šçš„è©±ï¼Œä½¿ç”¨MSDçš„æ•ˆçŽ‡æœƒæ¯”è¼ƒå¥½ï¼ŒMSDçš„æ–¹å¼æ°èˆ‡LSDç›¸åï¼Œæ˜¯ç”±é«˜ä½æ•¸ç‚ºåŸºåº•é–‹å§‹é€²è¡Œåˆ†é…ï¼Œå…¶ä»–çš„æ¼”
+ç®—æ–¹å¼å‰‡éƒ½ç›¸åŒã€‚ <br>
 
 
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 
 <ul>
@@ -595,7 +595,7 @@ LSDªº°ò¼Æ±Æ§Ç¾A¥Î©ó¦ì¼Æ¤pªº¼Æ¦C¡A¦pªG¦ì¼Æ¦hªº¸Ü¡A¨Ï¥ÎMSDªº®Ä²v·|¤ñ¸û¦n¡AMSDªº¤è¦
 </ul>
 
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>int main(void) { <br>    int data[10] = {73, 22, 93, 43, 55, 14, 28, 65, 39, 81}; <br>    int temp[10][10] = {0}; <br>    int order[10] = {0}; <br>    int i, j, k, n, lsd; <br>    <br>    k = 0; <br>    n = 1; <br><br>    printf("\n±Æ§Ç«e: "); <br>    for(i = 0; i &lt; 10; i++) <br>        printf("%d ", data[i]); <br><br>    putchar('\n'); <br><br>    while(n &lt;= 10) { <br>        for(i = 0; i &lt; 10; i++) { <br>            lsd = ((data[i] / n) % 10); <br>            temp[lsd][order[lsd]] = data[i]; <br>            order[lsd]++; <br>        } <br><br>        printf("\n­«·s±Æ¦C: "); <br>        for(i = 0; i &lt; 10; i++) { <br>            if(order[i] != 0) <br>                for(j = 0; j &lt; order[i]; j++) { <br>                    data[k] = temp[i][j]; <br>                    printf("%d ", data[k]); <br>                    k++; <br>                } <br>            order[i] = 0; <br>        } <br><br>        n *= 10; <br>        k = 0; <br>    } <br><br>    putchar('\n'); <br>    printf("\n±Æ§Ç«á: "); <br>    for(i = 0; i &lt; 10; i++) <br>        printf("%d ", data[i]); <br><br>    return 0; <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>int main(void) { <br>    int data[10] = {73, 22, 93, 43, 55, 14, 28, 65, 39, 81}; <br>    int temp[10][10] = {0}; <br>    int order[10] = {0}; <br>    int i, j, k, n, lsd; <br>    <br>    k = 0; <br>    n = 1; <br><br>    printf("\næŽ’åºå‰: "); <br>    for(i = 0; i &lt; 10; i++) <br>        printf("%d ", data[i]); <br><br>    putchar('\n'); <br><br>    while(n &lt;= 10) { <br>        for(i = 0; i &lt; 10; i++) { <br>            lsd = ((data[i] / n) % 10); <br>            temp[lsd][order[lsd]] = data[i]; <br>            order[lsd]++; <br>        } <br><br>        printf("\né‡æ–°æŽ’åˆ—: "); <br>        for(i = 0; i &lt; 10; i++) { <br>            if(order[i] != 0) <br>                for(j = 0; j &lt; order[i]; j++) { <br>                    data[k] = temp[i][j]; <br>                    printf("%d ", data[k]); <br>                    k++; <br>                } <br>            order[i] = 0; <br>        } <br><br>        n *= 10; <br>        k = 0; <br>    } <br><br>    putchar('\n'); <br>    printf("\næŽ’åºå¾Œ: "); <br>    for(i = 0; i &lt; 10; i++) <br>        printf("%d ", data[i]); <br><br>    return 0; <br>} <br></pre>
 
 
 <br>
